# final-project

./: digital_voting.db  get_facial_encoding.py  get_facial_points.py  pyproject.toml  test.py  voted.csv
app/: candidate_credentials.csv  checker.py  credentials.csv  database.py  main.py  models.py
app/candidate/: candidate_route.py
app/voter/: schemas.py  voter_route.py
