[tool.poetry]
name = "[Digital_Voting_PPython]"
version = "0.1.0"
description = "College final Year Project Based On BlockChain Technology"
authors = ["Dipesh Regmi <regdipesh1113@gmail.com>"]
license = "UNLICENSED"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
opencv-python = "^4.6.0"
opencv-python-headless = "^4.6.0"
face-recognition = "^1.3.0"
requests = "^2.28.1"
qrcode = {extras = ["pil"], version = "^7.3.1"}
python-multipart = "^0.0.5"
SQLAlchemy = "^1.4.40"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
